--- a/src/ZConvertFile/ZConvertFile/ZConvertFile.vcproj
+++ b/src/ZConvertFile/ZConvertFile/ZConvertFile.vcproj
@@ -225,6 +225,10 @@
 				RelativePath=".\ZConvertToFile.cpp"
 				>
 			</File>
+			<File
+				RelativePath=".\ZConvertToZip.cpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Í·ÎÄ¼þ"
@@ -265,6 +269,10 @@
 			</File>
 			<File
 				RelativePath=".\ZConvertToFile.h"
+				>
+			</File>
+			<File
+				RelativePath=".\ZConvertToZip.h"
 				>
 			</File>
 		</Filter>
