--- a/src/ZConvertFile/ZConvertFile/ZConvertFile.vcproj
+++ b/src/ZConvertFile/ZConvertFile/ZConvertFile.vcproj
@@ -68,6 +68,8 @@
 			<Tool
 				Name="VCLinkerTool"
 				LinkIncremental="2"
+				IgnoreAllDefaultLibraries="false"
+				IgnoreDefaultLibraryNames=""
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				TargetMachine="1"
