--- a/src/ZEncrpt_GUI/ZEncrpt_GUI/ZEncrpt_GUI.rc
+++ b/src/ZEncrpt_GUI/ZEncrpt_GUI/ZEncrpt_GUI.rc
@@ -94,12 +94,12 @@ EXSTYLE WS_EX_APPWINDOW
 CAPTION "文档加密工具"
 FONT 9, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_TAB_MAIN,"SysTabControl32",0x0,7,7,296,165
+    CONTROL         "",IDC_TAB_MAIN,"SysTabControl32",TCS_MULTILINE,7,7,296,165
     PUSHBUTTON      "取消",IDCANCEL,253,178,50,14
     DEFPUSHBUTTON   "确定",IDOK,181,178,50,14
 END
 
-IDD_UI_NORMAL DIALOGEX 0, 0, 350, 172
+IDD_UI_NORMAL DIALOGEX 0, 0, 350, 174
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
@@ -107,17 +107,16 @@ BEGIN
     PUSHBUTTON      "浏览",IDC_BUTTON2,282,12,50,14
     EDITTEXT        IDC_EDIT1,14,30,318,14,ES_AUTOHSCROLL
     LTEXT           "设置密码",IDC_STATIC,21,65,33,8
-    EDITTEXT        IDC_EDIT2,67,62,100,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT2,67,62,100,14,ES_PASSWORD | ES_AUTOHSCROLL
     LTEXT           "再次输入",IDC_STATIC,22,86,33,8
-    EDITTEXT        IDC_EDIT3,67,83,100,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT3,67,83,100,14,ES_PASSWORD | ES_AUTOHSCROLL
     LTEXT           "加密算法",IDC_STATIC,22,109,33,8
     COMBOBOX        IDC_COMBO1,67,107,99,30,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     CONTROL         "记为默认",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,68,131,48,10
     GROUPBOX        "加密设置",IDC_STATIC,17,50,158,103
     GROUPBOX        "其他设置",IDC_STATIC,182,50,149,103
     CONTROL         "加密后删除源文件",IDC_CHECK2,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,191,64,80,10
-    CONTROL         "多个文件压缩后加密",IDC_CHECK3,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,191,82,88,10
-    CONTROL         "操作完成后关机",IDC_CHECK5,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,191,101,72,10
+    CONTROL         "操作完成后关机",IDC_CHECK5,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,191,80,72,10
 END
 
 IDD_UI_FILELIST DIALOGEX 0, 0, 350, 194
@@ -196,7 +195,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 343
         TOPMARGIN, 7
-        BOTTOMMARGIN, 165
+        BOTTOMMARGIN, 167
     END
 
     IDD_UI_FILELIST, DIALOG
