--- a/src/ZEncrpt_GUI/ZEncrpt_GUI/ZEncrpt_GUI.rc
+++ b/src/ZEncrpt_GUI/ZEncrpt_GUI/ZEncrpt_GUI.rc
@@ -111,7 +111,7 @@ BEGIN
     LTEXT           "再次输入",IDC_STATIC,22,86,33,8
     EDITTEXT        IDC_EDIT3,67,83,100,14,ES_PASSWORD | ES_AUTOHSCROLL
     LTEXT           "加密算法",IDC_STATIC,22,109,33,8
-    COMBOBOX        IDC_COMBO1,67,107,99,30,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_COMBO1,67,107,99,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     CONTROL         "记为默认",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,68,131,48,10
     GROUPBOX        "加密设置",IDC_STATIC,17,50,158,103
     GROUPBOX        "其他设置",IDC_STATIC,182,50,149,103
@@ -119,11 +119,13 @@ BEGIN
     CONTROL         "操作完成后关机",IDC_CHECK5,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,191,80,72,10
 END
 
-IDD_UI_FILELIST DIALOGEX 0, 0, 350, 194
+IDD_UI_FILELIST DIALOGEX 0, 0, 340, 164
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_LIST2,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,7,336,180
+    CONTROL         "",IDC_FILELIST,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,27,326,130
+    PUSHBUTTON      "添加",IDC_BUTTON1,277,10,50,14,BS_CENTER
+    PUSHBUTTON      "移除",IDC_BUTTON2,223,10,50,14
 END
 
 
@@ -149,11 +151,11 @@ BEGIN
     BEGIN
         BLOCK "080403a8"
         BEGIN
-            VALUE "CompanyName", "TODO: <公司名>"
-            VALUE "FileDescription", "TODO: <文件说明>"
+            VALUE "CompanyName", "zzxuan"
+            VALUE "FileDescription", "文档加密工具"
             VALUE "FileVersion", "1.0.0.1"
             VALUE "InternalName", "ZEncrpt_GUI.exe"
-            VALUE "LegalCopyright", "TODO: (C) <公司名>。保留所有权利。"
+            VALUE "LegalCopyright", "文档加密工具"
             VALUE "OriginalFilename", "ZEncrpt_GUI.exe"
             VALUE "ProductName", "TODO: <产品名>"
             VALUE "ProductVersion", "1.0.0.1"
@@ -201,9 +203,9 @@ BEGIN
     IDD_UI_FILELIST, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 343
+        RIGHTMARGIN, 333
         TOPMARGIN, 7
-        BOTTOMMARGIN, 187
+        BOTTOMMARGIN, 157
     END
 END
 #endif    // APSTUDIO_INVOKED
