--- a/src/ZEncryptFile/ZEncryptFile/ZEncryptFile.vcproj
+++ b/src/ZEncryptFile/ZEncryptFile/ZEncryptFile.vcproj
@@ -162,7 +162,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="copy /b &quot;$(InputDir)$(ProjectName).h&quot; &quot;../../common/include/$(ProjectName).h&quot;;&#x0D;&#x0A;copy /b &quot;$(TargetDir)$(ProjectName).dll&quot; &quot;../../BIN/$(ConfigurationName)/$(ProjectName).dll&quot;;&#x0D;&#x0A;copy /b &quot;$(TargetDir)$(ProjectName).lib&quot; &quot;../../common/lib/$(ProjectName).lib&quot;;&#x0D;&#x0A;copy /b &quot;$(TargetDir)$(ProjectName).pdb&quot; &quot;../../BIN/PDB/$(ConfigurationName)/$(ProjectName).pdb&quot;;"
+				CommandLine="copy /b &quot;$(InputDir)$(ProjectName).h&quot; &quot;../../common/include/$(ProjectName).h&quot;;&#x0D;&#x0A;copy /b &quot;$(TargetDir)$(ProjectName).dll&quot; &quot;../../BIN/$(ConfigurationName)/$(ProjectName).dll&quot;;&#x0D;&#x0A;copy /b &quot;$(TargetDir)$(ProjectName).lib&quot; &quot;../../common/lib/$(ProjectName).lib&quot;;&#x0D;&#x0A;copy /b &quot;$(TargetDir)$(ProjectName).pdb&quot; &quot;../../BIN/PDB/$(ConfigurationName)/$(ProjectName).pdb&quot;;&#x0D;&#x0A;"
 			/>
 		</Configuration>
 	</Configurations>
@@ -174,6 +174,10 @@
 			Filter="cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx"
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
+			<File
+				RelativePath="..\..\common\include\ConverHelper.cpp"
+				>
+			</File>
 			<File
 				RelativePath=".\dllmain.cpp"
 				>
@@ -238,6 +242,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath="..\..\common\include\ConverHelper.h"
+				>
+			</File>
 			<File
 				RelativePath=".\stdafx.h"
 				>
